tests/golden/parse_errors/multiple_block_parse_errors.cd
fun bad() {
  print ;
  let x = ;
  return 1;
}
