tests/golden/parse_errors/multiple_block_parse_errors.err
Parse error at 2:9: expected expression
    print ;
          ^
Parse error at 3:11: expected expression
    let x = ;
            ^
